Add github latest update checker

--- a/Kakaocon/Kakaocon.csproj
+++ b/Kakaocon/Kakaocon.csproj
@@ -220,6 +220,7 @@
     <Resource Include="Resources\image.png" />
     <Resource Include="Resources\no.png" />
     <Resource Include="Resources\delete.png" />
+    <Resource Include="Resources\info.png" />
     <Content Include="WpfAnimatedGif\WpfAnimatedGif.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
